# hbot-strategy-dsl

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
examples/simple_strategy/: simple.hbs  simple.strategy
hbot_strategy_dsl/: cli.py  generator.py  language.py  validator.py
hbot_strategy_dsl/grammar/: strategy.tx
hbot_strategy_dsl/templates/: strategy_conf.tpl  strategy_conf_map.tpl  strategy_impl.tpl  strategy_start.tpl
hbot_strategy_dsl/templates/script_strategy/: script.tpl  strategy_impl.tpl
hbot_strategy_dsl/templates/strategy_base/: strategy_conf.tpl  strategy_start.tpl
hummingbot_strategy_dsl/: __init__.py  generator.py  language.py
hummingbot_strategy_dsl/grammar/: strategy.tx
