[metadata]
name = hbot-strategy-dsl
author = Konstantinos Panayiotou
author_email = klpanagi@gmail.com
license = MIT
description = Domain-Specific Language for creating hummingbot strategies.
keywords = hbot_strategy_dsl
url =
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
packages = hbot_strategy_dsl
zip_safe = False
install_requires =
    textX
include_package_data = True
package_dir =
    hbot_strategy_dsl = hbot_strategy_dsl

[options.extras_require]
dev =
    wheel
    twine
test =
    flake8
    tox
    coverage
    coveralls
    pytest

[options.entry_points]
textx_languages =
    hbot_strategy = hbot_strategy_dsl:language

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:comm_idl/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs .git/*, .eggs/*, .tox/*, build/*, dist/*, venv/*

[aliases]
# Define setup.py command aliases here

